--- a/TriviaGame/app/src/main/AndroidManifest.xml
+++ b/TriviaGame/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SoloScreen"></activity>
+        <activity android:name=".MultiplayerScreen"></activity>
     </application>
 
 </manifest>
