--- a/TriviaGame/app/src/main/AndroidManifest.xml
+++ b/TriviaGame/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SoloScreen"></activity>
-        <activity android:name=".MultiplayerScreen"></activity>
+        <activity android:name=".SoloScreen" />
+        <activity android:name=".MultiplayerScreen" />
+        <activity android:name=".SettingsScreen" />
+        <activity android:name=".QuestionsScreen"></activity>
     </application>
 
 </manifest>
