--- a/TriviaGame/app/src/main/AndroidManifest.xml
+++ b/TriviaGame/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fullsailclass.triviagame">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +20,8 @@
         <activity android:name=".SoloScreen" />
         <activity android:name=".MultiplayerScreen" />
         <activity android:name=".SettingsScreen" />
-        <activity android:name=".QuestionsScreen"></activity>
+        <activity android:name=".QuestionsScreen">
+        </activity>
     </application>
 
 </manifest>
