Added buttons to game over

--- a/TriviaGame/app/src/main/AndroidManifest.xml
+++ b/TriviaGame/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
         <activity android:name=".GamesScreen" />
         <activity android:name=".EntertainmentScreen" />
         <activity android:name=".SportsScreen"/>
-        <activity android:name=".GameOverPopUp"
-            android:theme="@style/AppTheme.CustomTheme"></activity>
+        <activity android:name=".GameOverPopUp"/>
+
     </application>
 
 </manifest>
