--- a/TriviaGame/app/src/main/AndroidManifest.xml
+++ b/TriviaGame/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="fullsailclass.triviagame">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    xz
     <application
         android:allowBackup="true"
         android:icon="@mipmap/triviaself"
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainMenu">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,15 +22,17 @@
         <activity android:name=".MultiplayerScreen" />
         <activity android:name=".SettingsScreen" />
         <activity android:name=".QuestionsScreen" />
-        <activity android:name=".CreditsScreen"/>
+        <activity android:name=".CreditsScreen" />
         <activity android:name=".HistoryScreen" />
         <activity android:name=".ScienceScreen" />
         <activity android:name=".MusicScreen" />
         <activity android:name=".GamesScreen" />
         <activity android:name=".EntertainmentScreen" />
-        <activity android:name=".SportsScreen"/>
-        <activity android:name=".GameOverPopUp"/>
-
+        <activity android:name=".SportsScreen" />
+        <activity
+            android:name=".GameOverPopUp"
+            android:theme="@style/AppTheme.CustomTheme" />
+        <activity android:name=".MainMenu"></activity>
     </application>
 
 </manifest>
