--- a/TriviaGame/app/src/main/AndroidManifest.xml
+++ b/TriviaGame/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="fullsailclass.triviagame">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/triviaself"
@@ -29,6 +30,7 @@
         <activity android:name=".GamesScreen" />
         <activity android:name=".EntertainmentScreen" />
         <activity android:name=".SportsScreen" />
+        <activity android:name=".Multiplayer"/>
         <activity
             android:name=".GameOverPopUp"
             android:theme="@style/AppTheme.CustomTheme" />
