--- a/TriviaGame/app/src/main/AndroidManifest.xml
+++ b/TriviaGame/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".Multiplayer" />
         <activity android:name=".TriviaselfOptions"/>
         <activity android:name=".TriviaSelfAddQ"/>
+        <activity android:name=".PlayTriviaself"/>
         <activity
             android:name=".GameOverPopUp"
             android:theme="@style/AppTheme.CustomTheme" />
